  in :mod:`rpy2.robjects.packages` and :mod:`rpy2.robjects.functions` were
  modified to keep a consistent naming.

- Trying to instantiate an :class:`rpy2.rlike.container.OrdDict` with a
  a :class:`dict` will result in a :class:`TypeError` rather than a
  :class:`ValueError`.

- Methods of :class:`rpy2.rlike.container.OrdDict` now raises a
  :class:`NotImplementedError` when not implemented.

Bugs fixed
----------

- `aes` in :mod:`rpy2.robjects.lib.ggplot2` had stopped working with the
  R package ggplot2 reaching version 3.2.0. (issue #562).

- Better handling of recent :mod:`pandas` arrays with missing values
 (related to issue #544).

- The mapping of the R operator `%in%` reachable through the attribute `ro`
  of R vectors was always returning `True`. It is now working properly.

- R POSIXct vectors with `NA` dates were triggering an error when converted
  in a data frame converted to :mod:`pandas` (issue #561).


Release 3.0.5
=============

Bugs fixed
----------

- No longer allow installation if Python 3 but < 3.5.

- Fixed error `undefined symbol: DATAPTR` if R < 3.5 (issue #565).


Release 3.0.4
=============

Bugs fixed
----------

- Fixed conversion of `pandas` :class:`Series` of dtype `pandas.Int32Dtype`,
  or `pandas.Int64Dtype` (issue #544).


Release 3.0.3
=============

Bugs fixed
----------

- Fixed the evaluation of R code using the "R magic" was delaying all
  output to the end of the execution of that code, independently of
  whether the attribute `cache_display_data` was `True` or `False`
  (issue #543).

- Fixed conversion of :class:`pandas.Series` of `dtype` "object" when
  all items are either all of the same type or are :obj:`None` (issue #540).


Release 3.0.2
=============

Bugs fixed
----------

- Failing to import `pandas` or `numpy` when loading the "R magic" extension
  for jupyter/ipython was hiding the cause of the error in the `ImportError`
  exception.

- Fallback when an R `POSIXct` vector does not had an attribute `"tzone"`